--- a/imgui/Cargo.toml
+++ b/imgui/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sys = { package = "imgui-sys", path = "../imgui-sys" }
 bitflags = "1.2"
+gl = { version = "0.13.0", optional = true }
+glutin = { version = "0.21.1", optional = true }
+
+[build-dependencies]
+cc = "1.0"
+bindgen = "0.46"
