--- a/imgui/Cargo.toml
+++ b/imgui/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Adolph C. <adolphc@outlook.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+opengl3 = ["gl"]
 
 [dependencies]
 bitflags = "1.2"
