Fixed mode3 color, changed tile function names, and started work on objects.

--- a/pyrite/Cargo.toml
+++ b/pyrite/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 pyrite-gba = { path = "../pyrite-gba" }
+pyrite-common = { path = "../pyrite-common" }
 gl = "0.13.0"
 glutin = "0.21.1"
 log = { version = "0.4", features = ["std"] }
