Completely changed LCD, memory, and ARM prefetch.
For now we are back to mode 3 rendering only but new modes should be
easier to add.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,11 @@ members = [
 ]
 
 [profile.dev]
-opt-level=1
+opt-level= 2
+debug = true
+debug-assertions = true
+
+[profile.release]
+opt-level= 3
+debug = false
+debug-assertions = false
