--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,23 +3,23 @@ strategy:
     windows-stable:
       imageName: 'vs2017-win2016'
       rustup_toolchain: stable
-      LLVM_VERSION: 8.0.1
+      LLVM_VERSION: 9.0.0
     mac-stable:
       imageName: 'macos-10.13'
       rustup_toolchain: stable
-      LLVM_VERSION: 8.0.1
+      LLVM_VERSION: 9.0.0
     linux-stable:
       imageName: 'ubuntu-16.04'
       rustup_toolchain: stable
-      LLVM_VERSION: 8.0.1
+      LLVM_VERSION: 9.0.0
     linux-beta:
       imageName: 'ubuntu-16.04'
       rustup_toolchain: beta
-      LLVM_VERSION: 8.0.1
+      LLVM_VERSION: 9.0.0
     linux-nightly:
       imageName: 'ubuntu-16.04'
       rustup_toolchain: nightly
-      LLVM_VERSION: 8.0.1
+      LLVM_VERSION: 9.0.0
 
 trigger:
 - master
@@ -28,7 +28,7 @@ pool:
   vmImage: $(imageName)
 steps:
   - checkout: self
-    submodules: true
+    submodules: recursive
   - script: |
       powershell -Command "$ProgressPreference = 'SilentlyContinue'; iwr -outf %TEMP%\LLVM-%LLVM_VERSION%-win64.exe http://releases.llvm.org/%LLVM_VERSION%/LLVM-%LLVM_VERSION%-win64.exe"
       set CLANG_DIR=%CD%\citools\clang
