--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,8 +14,12 @@ jobs:
 
         steps:
         - uses: actions/checkout@v2
-          with:
-              submodules: recursive
+        - name: Checkout Submodules
+            shell: bash
+            run: |
+                auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+                git submodule sync --recursive
+                git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
         - uses: actions-rs/toolchain@v1
           with:
               toolchain: ${{ matrix.rust_channel }}
