--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,6 +25,10 @@ jobs:
               toolchain: ${{ matrix.rust_channel }}
               override: true
 
+        - name: Install LLVM (Windows)
+          run: choco install llvm
+          if: matrix.os == 'windows-latest'
+
         # Display Tool Versions:
         - name: Check Tools
           run: |
