--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,6 +1,11 @@
 name: Tests
 
-on: [push, pull_request]
+on:
+    pull_request:
+    push:
+        branches:
+            - master
+            - dev
 
 jobs:
     cargo_tests:
@@ -24,6 +29,24 @@ jobs:
           with:
               toolchain: ${{ matrix.rust_channel }}
               override: true
+
+        - name: Cache Cargo Registry
+          uses: actions/cache@v1
+          with:
+              path: ~/.cache/registry
+              key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+
+        - name: Cache Cargo Index
+          uses: actions/cache@v1
+          with:
+              path: ~/.cache/git
+              key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
+
+        - name: Cache Cargo Target Dir
+          uses: actions/cache@v1
+          with:
+              path: target
+              key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
         - name: Install LLVM (Windows)
           run: choco install llvm
