--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -32,6 +32,7 @@ jobs:
           with:
               toolchain: ${{ matrix.rust_channel }}
               override: true
+              profile: minimal
 
         - name: Cache Cargo Registry
           uses: actions/cache@v1
