--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,10 +2,11 @@ name: Tests
 
 on:
     pull_request:
+        branches:
+            - master
     push:
         branches:
             - master
-            - dev
 
 jobs:
     cargo_tests:
