--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -55,12 +55,12 @@ jobs:
         - name: Cache Chocolatey Cache Dir
           uses: actions/cache@v1
           with:
-              path: ~/.choco-cache
+              path: .choco-cache
               key: ${{ matrix.os }}-chocolatey
           if: matrix.os == 'windows-latest'
 
         - name: Configure Chocolatey
-          run: choco config set cacheLocation ~/.choco-cache
+          run: choco config set cacheLocation .choco-cache
           if: matrix.os == 'windows-latest'
         - name: Install LLVM (Windows)
           run: choco install llvm
