--- a/imgui/Cargo.toml
+++ b/imgui/Cargo.toml
@@ -15,4 +15,4 @@ glutin = { version = "0.24", optional = true }
 
 [build-dependencies]
 cc = "1.0"
-bindgen = "0.53"
+bindgen = { version = "0.53", default-features = false, features = ["runtime"] }
