--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,7 @@ members = [
     "pyrite-arm",
     "pyrite-common",
     "pyrite-gba",
-    "pyrite",
-    "imgui"
+    "pyrite"
 ]
 
 [profile.dev]
