--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
 
         strategy:
             matrix:
-                rust_channel: [stable, beta, nightly]
+                rust_channel: [stable]
                 os: [ubuntu-latest, windows-latest, macOS-latest]
 
         env:
