--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         env:
             CARGO_INCREMENTAL: 0
         steps:
-        - uses: actions/checkoutv2
+        - uses: actions/checkout@v2
         - name: Checkout
           shell: bash
           run: |
@@ -63,7 +63,7 @@ jobs:
         env:
             CARGO_INCREMENTAL: 0
         steps:
-        - uses: actions/checkoutv2
+        - uses: actions/checkout@v2
         - name: Checkout
           shell: bash
           run: |
@@ -112,7 +112,7 @@ jobs:
         env:
             CARGO_INCREMENTAL: 0
         steps:
-        - uses: actions/checkoutv2
+        - uses: actions/checkout@v2
         - name: Checkout
           shell: bash
           run: |
