Fixed CI Rust toolchain.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
             git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
         - uses: actions-rs/toolchain@v1
           with:
-              toolchain: ${{ matrix.rust_channel }}
+              toolchain: stable
               profile: default
               override: true
               components: rustfmt, clippy
@@ -72,7 +72,7 @@ jobs:
             git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
         - uses: actions-rs/toolchain@v1
           with:
-              toolchain: ${{ matrix.rust_channel }}
+              toolchain: stable
               profile: default
               override: true
               components: rustfmt, clippy
@@ -121,7 +121,7 @@ jobs:
             git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
         - uses: actions-rs/toolchain@v1
           with:
-              toolchain: ${{ matrix.rust_channel }}
+              toolchain: stable
               profile: default
               override: true
               components: rustfmt, clippy
