--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
         - name: Check Formatting
           run: cargo fmt --all -- --check
     windows-test:
-        runs-on: ubuntu-latest
+        runs-on: windows-latest
         env:
             CARGO_INCREMENTAL: 0
         steps:
@@ -108,7 +108,7 @@ jobs:
         - name: Check Formatting
           run: cargo fmt --all -- --check
     macos-test:
-        runs-on: ubuntu-latest
+        runs-on: macos-latest
         env:
             CARGO_INCREMENTAL: 0
         steps:
